--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
     <noscript>
       <strong>We're sorry but Pinterest doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div v-responsive.lg.xl id="app"></div>
-    <div v-responsive.md id="app2"></div>
+    <div id="app"></div>
 
     <!-- built files will be auto injected -->
   </body>
